--- a/Basic.Azure.Storage.Tests.Integration/Basic.Azure.Storage.Tests.Integration.csproj
+++ b/Basic.Azure.Storage.Tests.Integration/Basic.Azure.Storage.Tests.Integration.csproj
@@ -68,6 +68,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\System.Spatial.5.6.2\lib\net40\System.Spatial.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,6 +80,7 @@
     <Compile Include="BlobLeaseMaintainerTests.cs" />
     <Compile Include="BlobServiceClientTests.cs" />
     <Compile Include="BlobServiceClientTestsExtensionsTests.cs" />
+    <Compile Include="BlobSharedAccessSignatureTests.cs" />
     <Compile Include="ProxyType.cs" />
     <Compile Include="QueueServiceClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
