--- a/Basic.Azure.Storage.Tests/Basic.Azure.Storage.Tests.csproj
+++ b/Basic.Azure.Storage.Tests/Basic.Azure.Storage.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Communications\BlobService\BlobOperations\PutBlobRequestTests.cs" />
     <Compile Include="Communications\BlobService\BlobRangeTests.cs" />
     <Compile Include="Communications\BlobService\BlobServiceClientExTests.cs" />
+    <Compile Include="Communications\BlobService\BlobSharedAccessSignatureTests.cs" />
     <Compile Include="Communications\BlobService\ContainerOperations\LeaseContainerAcquireTests.cs" />
     <Compile Include="Communications\Common\SharedAccessPermissionParseTests.cs" />
     <Compile Include="Communications\Core\ExceptionRetryStrategyTests.cs" />
